; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/libncftp/extr_io.c_FTPPutOneFileAscii.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/libncftp/extr_io.c_FTPPutOneFileAscii.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kTypeAscii = common dso_local global i32 0, align 4
@kResumeNo = common dso_local global i32 0, align 4
@kDeleteNo = common dso_local global i32 0, align 4
@NoConfirmResumeUploadProc = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @FTPPutOneFileAscii(i32 %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load i8*, i8** %5, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = load i32, i32* @kTypeAscii, align 4
  %11 = load i32, i32* @kResumeNo, align 4
  %12 = load i32, i32* @kDeleteNo, align 4
  %13 = load i32, i32* @NoConfirmResumeUploadProc, align 4
  %14 = call i32 @FTPPutOneFile3(i32 %7, i8* %8, i8* %9, i32 %10, i32 -1, i32 0, i32* null, i32* null, i32 %11, i32 %12, i32 %13, i32 0)
  ret i32 %14
}

declare dso_local i32 @FTPPutOneFile3(i32, i8*, i8*, i32, i32, i32, i32*, i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
